--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btn_goto_third">Goto Third Activity</string>
     <string name="tv_second_activity">Second Activity</string>
     <string name="btn_show_toast">Toast</string>
+    <string name="second_toast_message">This is Second Activity</string>
 </resources>
